--- a/package.json
+++ b/package.json
@@ -19,18 +19,10 @@
   },
   "homepage": "https://github.com/rchaser53/daily-memo#readme",
   "dependencies": {
-    "@types/react": "^16.7.18",
-    "@types/react-dom": "^16.0.11",
-    "babel-loader": "^8.0.4",
-    "html-loader": "^0.5.5",
+    "@types/styled-components": "^4.1.4",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.2",
-    "ts-loader": "^5.3.2",
-    "typescript": "^3.2.2",
-    "webpack": "^4.28.2",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.14"
+    "styled-components": "^4.1.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
@@ -43,12 +35,19 @@
     "@babel/preset-typescript": "^7.0.0",
     "@types/jest": "^22.2.3",
     "@types/node": "^10.12.18",
+    "@types/react": "^16.7.18",
+    "@types/react-dom": "^16.0.11",
     "babel-eslint": "^9.0.0",
-    "babel-loader": "^8.0.0",
+    "babel-loader": "^8.0.4",
     "css-loader": "^2.1.0",
     "html-webpack-plugin": "^3.2.0",
     "prettier": "^1.15.3",
     "react-svg-loader": "^2.1.0",
-    "style-loader": "^0.23.1"
+    "style-loader": "^0.23.1",
+    "ts-loader": "^5.3.2",
+    "typescript": "^3.2.2",
+    "webpack": "^4.28.2",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.14"
   }
 }
